<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">悠兼职</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="seek_part_time">学生入口</string>
    <string name="hire_part_time">企业入口</string>
    <string name="back">返回</string>
    <string name="quick_register">快速注册</string>
    <string name="username">请输入手机号</string>
    <string name="password">请输入6-20位密码</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login">登录</string>
    <string name="no_register">不登录，先随便看看</string>
    <string name="verify_code">请输入验证码</string>
    <string name="rules">我已阅读并同意</string>
    <string name="text_rules">悠兼职用户协议</string>
    <string name="register">注册</string>
    <string name="send_verify">发送验证码</string>
    <string name="home_page">首页</string>
    <string name="search_job">分类导航</string>
    <string name="person_center">个人中心</string>
    <string name="choose_type">选择类型</string>
    <string name="choose_area">选择区域</string>
    <string name="choose_time">选择时间</string>
    <string name="choose_pay">薪资结算</string>
    <string name="my_suggest">我的建议</string>
    <string name="logout">注销</string>
    <string name="company_name">账户名称或企业名称</string>
    <string name="newest_job">最新兼职</string>
    <string name="find_password">找回密码</string>
    <string name="change_password">修改密码</string>
    <string name="find_text">请输入注册时的手机号：</string>
    <string name="phone_number">手机号码</string>
    <string name="code">验证码</string>
    <string name="next">下一步</string>
    <string name="enter_password">输入新密码</string>
    <string name="old_password">旧密码</string>
    <string name="ensure_password">确认密码</string>
    <string name="new_password">新密码</string>
    <string name="pass_hint">6-20位数字或字母</string>
    <string name="submit">提交</string>
    <string name="register_for_student">求职者注册</string>
    <string name="account">账号</string>
    <string name="pass">密码</string>
    <string name="preview">预览</string>
    <string name="edit_photo_text">长按图片可设置为头像或删除</string>
    <string name="time_table">工作时间表:</string>
    <string name="name">姓名:</string>
    <string name="sex">性别:</string>
    <string name="height">身高:</string>
    <string name="age">年龄:</string>
    <string name="experience">工作经验:</string>
    <string name="city">城市:</string>
    <string name="area">区域:</string>
    <string name="school">学校:</string>
    <string name="edit">点击编辑</string>
    <string name="guide">分类导航</string>
    <string name="part_time_detail">兼职详情</string>
    <string name="search">搜索</string>
    <string name="job_type">兼职类型：</string>
    <string name="job_company">企业名称：</string>
    <string name="job_people_count">招聘人数：</string>
    <string name="job_pay">薪资水平：</string>
    <string name="job_time">兼职日期：</string>
    <string name="job_area">工作区域：</string>
    <string name="job_content">工作内容</string>
    <string name="company_intro">企业简介</string>
    <string name="company_person">企业责任人：</string>
    <string name="company_phone">联系电话：</string>
    <string name="company_address">企业地址：</string>
    <string name="contact_person">联系人：</string>
    <string name="contact_phone">联系电话：</string>
    <string name="contact_email">联系邮箱：</string>
    <string name="tips">温馨提示</string>
    <string name="warn">注：如果是无聊的恶意投诉，会被拉黑的。</string>
    <string name="edit_resume">编辑简历</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="part_time">兼职日期</string>
    <string name="post_intro">岗位描述</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_login_for_company">LoginForCompanyActivity</string>
    <string name="title_activity_part_time">PartTimeActivity</string>
    <string name="title_activity_release_part_time">ReleasePartTimeActivity</string>
    <string name="title_activity_register_for_students">RegisterForStudentsActivity</string>
    <string name="title_activity_choose_job_list">ChooseJobListActivity</string>
    <string name="title_activity_my_resume">MyResumeActivity</string>
    <string name="title_activity_person_info">PersonInfoActivity</string>
    <string name="title_activity_newest_job">NewestJobActivity</string>
    <string name="title_activity_edit_resume">EditResumeActivity</string>
    <string name="title_activity_find_password">FindPasswordActivity</string>
    <string name="title_activity_find_password2">FindPassword2Activity</string>
    <string name="title_activity_part_time_detail">PartTimeDetailActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_integrity">IntegrityActivity</string>
    <string name="title_activity_integrity_detail">IntegrityDetailActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_suggest">SuggestActivity</string>
    <string name="title_activity_msg">MsgActivity</string>
    <string name="title_activity_part_time_pride">PartTimePrideActivity</string>
    <string name="title_activity_html_resume">HtmlResumeActivity</string>
    <string name="title_activity_zili_list">ZiliListActivity</string>
    <string name="title_activity_thankful">ThankfulActivity</string>
    <string name="title_activity_msg_list">MsgListActivity</string>
    <string name="title_activity_msg_detail">MsgDetailActivity</string>
    <string name="title_activity_company_info_submit">CompanyInfoSubmitActivity</string>
    <string name="title_activity_company_release">CompanyReleaseActivity</string>
    <string name="title_activity_release_new_job">ReleaseNewJobActivity</string>
    <string name="title_activity_company_search_resume">CompanySearchResumeActivity</string>
    <string name="title_activity_apply_authentication">ApplyAuthenticationActivity</string>
    <string name="title_activity_admint_job">AdmintJobActivity</string>
    <string name="title_activity_company_integrity">CompanyIntegrityActivity</string>
    <string name="title_activity_resume_list">ResumeListActivity</string>
    <string name="title_activity_height">HeightActivity</string>
    <string name="title_activity_resume_choose_item">ResumeChooseItemActivity</string>
    <string name="title_activity_check_resume">CheckResumeActivity</string>
    <string name="title_activity_invite_interview">InviteInterviewActivity</string>
    <string name="title_activity_you_detail">YouDetailActivity</string>
    <string name="title_activity_safety">SafetyActivity</string>
    <string name="title_activity_grow">GrowActivity</string>
    <string name="title_activity_up_vip">UpVipActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_school_major">SchoolMajorActivity</string>
    <string name="title_activity_detail_parttime_time">DetailParttimeTimeActivity</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="title_activity_improvement">ImprovementActivity</string>
    <string name="title_activity_html_integrity">HtmlIntegrityActivity</string>

</resources>
