<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg" >

    <LinearLayout
        android:id="@+id/find_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp" >

        <include layout="@layout/back_btn_layout" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/find_back"
        android:layout_alignParentTop="true"
        android:layout_alignTop="@id/find_back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/find_password"
        android:textColor="@color/text_color"
        android:textSize="@dimen/title_size" />

    <View
        android:id="@+id/find_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:layout_below="@id/find_back"
        android:background="@color/yellow"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/find_back_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/find_view"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/find_text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/activity_title_size" />

    <RelativeLayout
        android:id="@+id/phone_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/find_back_text"
        android:layout_alignRight="@id/find_back_text"
        android:layout_below="@id/find_back_text"
        android:layout_marginTop="20dp"
        android:background="@color/white_bg" >

        <TextView
            android:id="@+id/find_phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:ems="4"
            android:gravity="right"
            android:text="@string/phone_number"
            android:textColor="@color/text_color"
            android:textSize="@dimen/activity_title_size" />

        <ImageView
            android:id="@+id/find_image1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@id/find_phone_text"
            android:src="@drawable/h_midline"
            android:layout_centerVertical="true" />

        <EditText
            android:id="@+id/find_phone_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_toLeftOf="@+id/find_send_verify"
            android:layout_toRightOf="@id/find_image1"
            android:background="@null"
            android:hint="@string/username"
            android:inputType="phone"
            android:maxEms="11"
            android:singleLine="true" />

        <Button
            android:id="@+id/find_send_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="@drawable/verrify_btn_shape"
            android:text="@string/send_verify"
            android:textColor="@color/red" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/code_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/phone_layout"
        android:layout_alignRight="@id/phone_layout"
        android:layout_below="@id/phone_layout"
        android:layout_marginTop="25dp"
        android:background="@color/white_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/find_code_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:ems="4"
            android:gravity="center_vertical|right"
            android:text="@string/code"
            android:textColor="@color/text_color"
            android:textSize="@dimen/activity_title_size" />

        <ImageView
            android:id="@+id/find_image2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@id/find_code_text"
            android:src="@drawable/h_midline"
            android:layout_centerVertical="true" />

        <EditText
            android:id="@+id/find_verify_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@id/find_image2"
            android:background="@null"
            android:hint="@string/verify_code"
            android:inputType="phone"
            android:singleLine="true" />
    </RelativeLayout>

    <Button
        android:id="@+id/find_next"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_alignLeft="@id/code_layout"
        android:layout_alignRight="@id/code_layout"
        android:layout_below="@id/code_layout"
        android:layout_marginTop="25dp"
        android:background="@drawable/yellow_btn_shape"
        android:gravity="center_horizontal|center_vertical"
        android:padding="5dp"
        android:text="@string/next"
        android:textColor="@color/white_bg"
        android:textSize="@dimen/activity_title_size" />

</RelativeLayout>